.archive/k8s/system/traefik/templates/traefik-forward-auth/ingress.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-forward-auth
  namespace: traefik-system
  labels:
    app: traefik-forward-auth
  annotations:
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`auth.fmlab.no`)
    kind: Rule
    services:
    - name: traefik-forward-auth
      kind: Service
      namespace: traefik-system
      port: 4181
    middlewares:
      - name: security
      - name: sso # Required when using single auth-host mode
  tls:
    secretName: traefik-forward-auth
